works, needs better notation and fixes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href="#!" class="brand-logo">Langscape</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="#!">About</a></li>
+          <li><a href="#!">Submissions</a></li>
         </ul>
       </div>
     </nav>
@@ -35,7 +36,7 @@
 
 
       <div class="col s4">
-       <span v-if="langaugePicked != null">Langauge Selected: {{langaugePicked}} <br>Switch langauge by click on Langauge card.</span>
+       <span v-if="langaugePicked != null"><h5>Langauge Selected: {{langaugePicked}} </h5><br>Switch langauge by click on Langauge card.</span>
        <span v-else>No Language has been selected. Select langauge by click on Langauge card.</span>
 <!--        <span>All data : {{allData}}</span>
        <span>LanguagesAdded: {{languagesAdded}}</span> -->
